improving validation. restructuring code